<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:id="@+id/main_fragment"
tools:context=".MainFragment">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/main"
    >
    <TextView
        android:id="@+id/name_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"/>
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:id="@+id/firstname_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_name_text"/>
    <EditText
        android:id="@+id/firstname_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:id="@+id/birthday_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_na_text"/>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthday" />


    <EditText
        android:id="@+id/birthday_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType = "date"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/birth_department_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City_de_text"/>
    <Spinner
        android:id="@+id/Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/departments"
        />
    <TextView
        android:id="@+id/birth_city_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City_na_text"/>

    <EditText
        android:id="@+id/birth_city_edit_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType = "text"
        tools:ignore="LabelFor,TextFields" />
    <Button
        android:id="@+id/button_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validation_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_telephone_number"
        android:id="@+id/textview"/>
    <EditText
        android:id="@+id/telephone_edit_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="LabelFor,TextFields" />
    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add" />
    <LinearLayout
        android:id="@+id/number_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
</LinearLayout>